Update live-test profile to use zi