@@ -32,11 +32,12 @@
       <plugin>
         <groupId>org.cloudhoist.plugin</groupId>
         <artifactId>zi</artifactId>
+        <version>0.4.1</version>
         <dependencies>
           <dependency>
             <groupId>ritz</groupId>
             <artifactId>ritz</artifactId>
-            <version>0.1.8-SNAPSHOT</version>
+            <version>0.2.0</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -209,28 +210,24 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>com.theoryinpractise</groupId>
-            <artifactId>clojure-maven-plugin</artifactId>
-            <version>1.3.8</version>
+            <groupId>org.cloudhoist.plugin</groupId>
+            <artifactId>zi</artifactId>
             <configuration>
-              <clojureOptions>-Dpallet.test.live=true -Dpallet.test.service-name=${pallet.test.service-name} -Dpallet.test.cleanup-nodes=${pallet.test.cleanup-nodes} -Dpallet.test.image-list=${pallet.test.image-list} -Dpallet.test.parallel=${pallet.test.parallel} -Dpallet.test.session-type=${pallet.test.session-type} -Xmx1024m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
-              <testSourceDirectories>
-                <testSourceDirectory>test</testSourceDirectory>
-              </testSourceDirectories>
-              <sourceDirectories>
-                <sourceDirectory>src</sourceDirectory>
-              </sourceDirectories>
-              <testDeclaredNamespaceOnly>false</testDeclaredNamespaceOnly>
+              <initScript>
+                (System/setProperty "ssh.username" "testuser")
+                (System/setProperty "pallet.test.live" "true")
+                (System/setProperty
+                  "pallet.test.service-name" "${pallet.test.service-name}")
+                (System/setProperty
+                  "pallet.test.cleanup-nodes" "${pallet.test.cleanup-nodes}")
+                (System/setProperty
+                  "pallet.test.image-list" "${pallet.test.image-list}")
+                (System/setProperty
+                  "pallet.test.parallel" "${pallet.test.parallel}")
+                (System/setProperty
+                  "pallet.test.session-type" "${pallet.test.session-type}")
+              </initScript>
             </configuration>
-            <executions>
-              <execution>
-                <id>test-clojure</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
